# case-crawler

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  config.example.yaml  docker-compose.yml  pyproject.toml
docs/superpowers/plans/: 2026-04-08-case-generation-pipeline.md  2026-04-08-casecrawler-ingestion-engine.md  2026-04-09-multi-step-case-architecture.md
docs/superpowers/specs/: 2026-04-08-case-generation-pipeline-design.md  2026-04-08-casecrawler-ingestion-engine-design.md  2026-04-09-multi-step-case-architecture-design.md
src/casecrawler/: __init__.py  cli.py  config.py
src/casecrawler/api/: app.py
src/casecrawler/export/: rl_exporter.py  (+1 more)
tests/: test_anthropic_provider.py  test_api.py  test_api_generate.py  test_blueprint_models.py  test_blueprint_reviewer.py  test_case_models.py  test_case_planner.py  test_case_store.py  test_chunker.py  test_cli.py  test_cli_generate.py  test_config.py  test_consistency_checker.py  test_dailymed.py  test_diagnostics_models.py  test_export_models.py  test_free_sources.py  test_generation_agents.py  test_generation_pipeline.py  test_imaging_templates.py  test_lab_panels.py  test_llm_base.py  test_llm_providers.py  test_models.py  test_multi_step_pipeline.py  test_multi_step_prompts.py  test_openfda.py  test_orchestrator.py  test_paid_sources.py  test_phase_models.py  test_phase_renderer.py  test_pipeline.py  test_pubmed.py  test_registry.py  test_retriever.py  test_rl_exporter.py  test_sft_exporter.py
ui/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx
(+63 files in other folders)
