[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "casecrawler"
version = "0.1.0"
description = "Medical knowledge ingestion engine for clinical case generation"
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "click>=8.0",
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.30",
    "httpx[http2]",
    "ruff>=0.6",
]

[project.scripts]
casecrawler = "casecrawler.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/casecrawler"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
